# cay-bang-grocery-api/src/main/java/com/springboot/project/entity/OrderEntity.java
@@ -5,6 +5,7 @@ import lombok.Getter;
 import lombok.Setter;
 import org.hibernate.annotations.Fetch;
 import org.hibernate.annotations.FetchMode;
+import org.hibernate.annotations.Generated;
 
 import java.util.List;
 
@@ -14,10 +15,20 @@ import java.util.List;
 @Table(name = "orders")
 public class OrderEntity extends BaseEntity {
 
+    @Generated
+    @Column(name = "order_number")
     private Long orderNumber;
+
+    @Column(name = "customer_name")
     private String customerName;
+
+    @Column(name = "address")
     private String address;
+
+    @Column(name = "phone_number")
     private String phoneNumber;
+
+    @Column(name = "email")
     private String email;
 
     @Fetch(FetchMode.SUBSELECT)
