# cay-bang-grocery-api/src/main/java/com/springboot/project/entity/OrderItemEntity.java
@@ -7,15 +7,18 @@ import lombok.Setter;
 @Getter
 @Setter
 @Entity
-@Table(name = "order_items")
+@Table(name = "order_item")
 public class OrderItemEntity extends BaseEntity {
 
+    @Column(name = "quantity")
     private Long quantity;
 
-    @OneToOne(orphanRemoval = true, cascade = CascadeType.ALL, fetch = FetchType.LAZY)
+    @OneToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "product_id", referencedColumnName = "id")
     private ProductEntity product;
 
     @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "order_id", referencedColumnName = "id")
     private OrderEntity order;
 
 }
